grammar/src/main/java/nl/santa/grammar/SantaLangParser.java
// Generated from src/main/java/nl/santa/grammar/SantaLangParser.g4 by ANTLR 4.7.1

    package nl.santa.grammar;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SantaLangParser extends SantaLangBaseParser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IllegalKeyword=1, TransformedKeyword=2, OrigNullLiteral=3, OrigTrueLiteral=4, 
		OrigFalseLiteral=5, OrigPlusLiteral=6, OrigMinusLiteral=7, OrigMultiplyLiteral=8, 
		OrigDivideLiteral=9, OrigConst=10, OrigAssign=11, OrigBreak=12, OrigFunction=13, 
		OrigFor=14, OrigOf=15, OrigSwitch=16, OrigCase=17, OrigDefault=18, OrigTry=19, 
		OrigCatch=20, OrigFinally=21, OrigWhile=22, DeletedKeyword=23, HashBangLine=24, 
		MultiLineComment=25, SingleLineComment=26, Var=27, Void=28, Class=29, 
		Enum=30, Extends=31, Super=32, Export=33, Import=34, Implements=35, Let=36, 
		Private=37, Public=38, Interface=39, Package=40, Protected=41, Static=42, 
		Yield=43, As=44, From=45, TemplateStringLiteral=46, HtmlComment=47, CDataComment=48, 
		RegularExpressionLiteral=49, Comment=50, OpenBracket=51, CloseBracket=52, 
		OpenParen=53, CloseParen=54, OpenBrace=55, CloseBrace=56, SemiColon=57, 
		Comma=58, Assign=59, QuestionMark=60, Colon=61, Ellipsis=62, Dot=63, PlusPlus=64, 
		MinusMinus=65, Plus=66, Minus=67, BitNot=68, Not=69, Multiply=70, Divide=71, 
		Modulus=72, Power=73, NullCoalesce=74, Hashtag=75, RightShiftArithmetic=76, 
		LeftShiftArithmetic=77, RightShiftLogical=78, LessThan=79, MoreThan=80, 
		LessThanEquals=81, GreaterThanEquals=82, Equals_=83, NotEquals=84, IdentityEquals=85, 
		IdentityNotEquals=86, BitAnd=87, BitXOr=88, BitOr=89, And=90, Or=91, MultiplyAssign=92, 
		DivideAssign=93, ModulusAssign=94, PlusAssign=95, MinusAssign=96, LeftShiftArithmeticAssign=97, 
		RightShiftArithmeticAssign=98, RightShiftLogicalAssign=99, BitAndAssign=100, 
		BitXorAssign=101, BitOrAssign=102, PowerAssign=103, ARROW=104, NullLiteral=105, 
		TrueLiteral=106, FalseLiteral=107, DecimalLiteral=108, HexIntegerLiteral=109, 
		OctalIntegerLiteral=110, OctalIntegerLiteral2=111, BinaryIntegerLiteral=112, 
		BigHexIntegerLiteral=113, BigOctalIntegerLiteral=114, BigBinaryIntegerLiteral=115, 
		BigDecimalIntegerLiteral=116, Break=117, Do=118, Instanceof=119, Typeof=120, 
		Case=121, Else=122, New=123, Catch=124, Finally=125, Return=126, Continue=127, 
		For=128, Switch=129, While=130, Debugger=131, Function=132, This=133, 
		With=134, Default=135, If=136, Throw=137, Delete=138, Of=139, Try=140, 
		ChristmasIsYou=141, ContinueHidden=142, Coming=143, To=144, Town=145, 
		Const=146, ConstStil=147, Async=148, Await=149, Identifier=150, StringLiteral=151, 
		WhiteSpaces=152, LineTerminator=153, UnexpectedCharacter=154;
	public static final int
		RULE_program = 0, RULE_sourceElement = 1, RULE_statement = 2, RULE_block = 3, 
		RULE_statementList = 4, RULE_declaration = 5, RULE_variableStatement = 6, 
		RULE_variableDeclarationList = 7, RULE_variableDeclaration = 8, RULE_emptyStatement = 9, 
		RULE_expressionStatement = 10, RULE_ifStatement = 11, RULE_iterationStatement = 12, 
		RULE_varModifier = 13, RULE_continueStatement = 14, RULE_breakStatement = 15, 
		RULE_returnStatement = 16, RULE_withStatement = 17, RULE_switchStatement = 18, 
		RULE_caseBlock = 19, RULE_caseClauses = 20, RULE_caseClause = 21, RULE_defaultClause = 22, 
		RULE_labelledStatement = 23, RULE_throwStatement = 24, RULE_tryStatement = 25, 
		RULE_catchProduction = 26, RULE_finallyProduction = 27, RULE_debuggerStatement = 28, 
		RULE_functionDeclaration = 29, RULE_methodDefinition = 30, RULE_formalParameterList = 31, 
		RULE_formalParameterArg = 32, RULE_lastFormalParameterArg = 33, RULE_functionBody = 34, 
		RULE_sourceElements = 35, RULE_arrayLiteral = 36, RULE_elementList = 37, 
		RULE_arrayElement = 38, RULE_objectLiteral = 39, RULE_propertyAssignment = 40, 
		RULE_propertyName = 41, RULE_arguments = 42, RULE_argument = 43, RULE_expressionSequence = 44, 
		RULE_singleExpression = 45, RULE_assignable = 46, RULE_anoymousFunction = 47, 
		RULE_arrowFunctionParameters = 48, RULE_arrowFunctionBody = 49, RULE_assignmentOperator = 50, 
		RULE_literal = 51, RULE_booleanLiteral = 52, RULE_numericLiteral = 53, 
		RULE_bigintLiteral = 54, RULE_identifierName = 55, RULE_reservedWord = 56, 
		RULE_keyword = 57, RULE_getter = 58, RULE_setter = 59, RULE_eos = 60;
	public static final String[] ruleNames = {
		"program", "sourceElement", "statement", "block", "statementList", "declaration", 
		"variableStatement", "variableDeclarationList", "variableDeclaration", 
		"emptyStatement", "expressionStatement", "ifStatement", "iterationStatement", 
		"varModifier", "continueStatement", "breakStatement", "returnStatement", 
		"withStatement", "switchStatement", "caseBlock", "caseClauses", "caseClause", 
		"defaultClause", "labelledStatement", "throwStatement", "tryStatement", 
		"catchProduction", "finallyProduction", "debuggerStatement", "functionDeclaration", 
		"methodDefinition", "formalParameterList", "formalParameterArg", "lastFormalParameterArg", 
		"functionBody", "sourceElements", "arrayLiteral", "elementList", "arrayElement", 
		"objectLiteral", "propertyAssignment", "propertyName", "arguments", "argument", 
		"expressionSequence", "singleExpression", "assignable", "anoymousFunction", 
		"arrowFunctionParameters", "arrowFunctionBody", "assignmentOperator", 
		"literal", "booleanLiteral", "numericLiteral", "bigintLiteral", "identifierName", 
		"reservedWord", "keyword", "getter", "setter", "eos"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, "'null'", "'true'", "'false'", "'+'", "'-'", "'*'", 
		"'/'", "'const'", "'='", "'break'", "'function'", "'for'", "'of'", "'switch'", 
		"'case'", "'default'", "'try'", "'catch'", "'finally'", "'while'", null, 
		null, null, null, "'var'", "'void'", "'class'", "'enum'", "'extends'", 
		"'super'", "'export'", "'import'", "'implements'", "'let'", "'private'", 
		"'public'", "'interface'", "'package'", "'protected'", "'static'", "'yield'", 
		"'as'", "'from'", null, null, null, null, null, "'['", "']'", "'('", "')'", 
		"'{'", "'}'", "';'", "','", "'heilige'", "'?'", "':'", "'...'", "'.'", 
		"'++'", "'--'", "'keer'", "'deel'", "'~'", "'!'", "'plus'", "'min'", "'%'", 
		"'**'", "'??'", "'#'", "'>>'", "'<<'", "'>>>'", "'<'", "'>'", "'<='", 
		"'>='", "'=='", "'!='", "'==='", "'!=='", "'&'", "'^'", "'|'", "'&&'", 
		"'||'", "'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", "'>>='", "'>>>='", 
		"'&='", "'^='", "'|='", "'**='", "'=>'", "'niks'", "'onwaar'", "'waar'", 
		null, null, null, null, null, null, null, null, null, "'hohoho'", "'do'", 
		"'instanceof'", "'typeof'", "'I gave you my hear'", "'else'", "'new'", 
		"'in'", "'wonderland'", "'return'", "'away'", "'all I want for'", "'last'", 
		"'winter'", "'debugger'", "'Davids Zoon'", "'this'", "'santa claus is'", 
		"'but the very next day you gave it'", "'if'", "'throw'", "'delete'", 
		"'is'", "'walking'", "'christmas is you'", "'continue'", "'coming'", "'to'", 
		"'town'", "'Stille'", "'stille'", "'async'", "'await'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "IllegalKeyword", "TransformedKeyword", "OrigNullLiteral", "OrigTrueLiteral", 
		"OrigFalseLiteral", "OrigPlusLiteral", "OrigMinusLiteral", "OrigMultiplyLiteral", 
		"OrigDivideLiteral", "OrigConst", "OrigAssign", "OrigBreak", "OrigFunction", 
		"OrigFor", "OrigOf", "OrigSwitch", "OrigCase", "OrigDefault", "OrigTry", 
		"OrigCatch", "OrigFinally", "OrigWhile", "DeletedKeyword", "HashBangLine", 
		"MultiLineComment", "SingleLineComment", "Var", "Void", "Class", "Enum", 
		"Extends", "Super", "Export", "Import", "Implements", "Let", "Private", 
		"Public", "Interface", "Package", "Protected", "Static", "Yield", "As", 
		"From", "TemplateStringLiteral", "HtmlComment", "CDataComment", "RegularExpressionLiteral", 
		"Comment", "OpenBracket", "CloseBracket", "OpenParen", "CloseParen", "OpenBrace", 
		"CloseBrace", "SemiColon", "Comma", "Assign", "QuestionMark", "Colon", 
		"Ellipsis", "Dot", "PlusPlus", "MinusMinus", "Plus", "Minus", "BitNot", 
		"Not", "Multiply", "Divide", "Modulus", "Power", "NullCoalesce", "Hashtag", 
		"RightShiftArithmetic", "LeftShiftArithmetic", "RightShiftLogical", "LessThan", 
		"MoreThan", "LessThanEquals", "GreaterThanEquals", "Equals_", "NotEquals", 
		"IdentityEquals", "IdentityNotEquals", "BitAnd", "BitXOr", "BitOr", "And", 
		"Or", "MultiplyAssign", "DivideAssign", "ModulusAssign", "PlusAssign", 
		"MinusAssign", "LeftShiftArithmeticAssign", "RightShiftArithmeticAssign", 
		"RightShiftLogicalAssign", "BitAndAssign", "BitXorAssign", "BitOrAssign", 
		"PowerAssign", "ARROW", "NullLiteral", "TrueLiteral", "FalseLiteral", 
		"DecimalLiteral", "HexIntegerLiteral", "OctalIntegerLiteral", "OctalIntegerLiteral2", 
		"BinaryIntegerLiteral", "BigHexIntegerLiteral", "BigOctalIntegerLiteral", 
		"BigBinaryIntegerLiteral", "BigDecimalIntegerLiteral", "Break", "Do", 
		"Instanceof", "Typeof", "Case", "Else", "New", "Catch", "Finally", "Return", 
		"Continue", "For", "Switch", "While", "Debugger", "Function", "This", 
		"With", "Default", "If", "Throw", "Delete", "Of", "Try", "ChristmasIsYou", 
		"ContinueHidden", "Coming", "To", "Town", "Const", "ConstStil", "Async", 
		"Await", "Identifier", "StringLiteral", "WhiteSpaces", "LineTerminator", 
		"UnexpectedCharacter"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SantaLangParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SantaLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SantaLangParser.EOF, 0); }
		public SourceElementsContext sourceElements() {
			return getRuleContext(SourceElementsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SantaLangParserListener ) ((SantaLangParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SantaLangParserListener ) ((SantaLangParserListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(122);
				sourceElements();
				}
				break;
			}
			setState(125);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SourceElementContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public SourceElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sourceElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SantaLangParserListener ) ((SantaLangParserListener)listener).enterSourceElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SantaLangParserListener ) ((SantaLangParserListener)listener).exitSourceElement(this);
		}
	}

	public final SourceElementContext sourceElement() throws RecognitionException {
		SourceElementContext _localctx = new SourceElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sourceElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public VariableStatementContext variableStatement() {
			return getRuleContext(VariableStatementContext.class,0);
		}
		public EmptyStatementContext emptyStatement() {
			return getRuleContext(EmptyStatementContext.class,0);
		}
		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public IterationStatementContext iterationStatement() {
			return getRuleContext(IterationStatementContext.class,0);
		}
		public ContinueStatementContext continueStatement() {
			return getRuleContext(ContinueStatementContext.class,0);
		}
		public BreakStatementContext breakStatement() {
			return getRuleContext(BreakStatementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public WithStatementContext withStatement() {
			return getRuleContext(WithStatementContext.class,0);
		}
		public LabelledStatementContext labelledStatement() {
			return getRuleContext(LabelledStatementContext.class,0);
		}
		public SwitchStatementContext switchStatement() {
			return getRuleContext(SwitchStatementContext.class,0);
		}
		public ThrowStatementContext throwStatement() {
			return getRuleContext(ThrowStatementContext.class,0);
		}
		public TryStatementContext tryStatement() {
			return getRuleContext(TryStatementContext.class,0);
		}
		public DebuggerStatementContext debuggerStatement() {
			return getRuleContext(DebuggerStatementContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SantaLangParserListener ) ((SantaLangParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SantaLangParserListener ) ((SantaLangParserListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(145);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				block();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				variableStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(131);
				emptyStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(132);
				expressionStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(133);
				ifStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(134);
				iterationStatement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(135);
				continueStatement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(136);
				breakStatement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(137);
				returnStatement();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(138);
				withStatement();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(139);
				labelledStatement();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(140);
				switchStatement();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(141);
				throwStatement();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(142);
				tryStatement();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(143);
				debuggerStatement();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(144);
				functionDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SantaLangParserListener ) ((SantaLangParserListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SantaLangParserListener ) ((SantaLangParserListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(OpenBrace);
			setState(149);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(148);
				statementList();
				}
				break;
			}
			setState(151);
			match(CloseBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementListContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SantaLangParserListener ) ((SantaLangParserListener)listener).enterStatementList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SantaLangParserListener ) ((SantaLangParserListener)listener).exitStatementList(this);
		}
	}
